--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "blog-website",
-  "version": "1.0.0",
-  "description": "Blog website",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "MD ARIF",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.6.3",
-    "mongoose-encryption": "^2.1.2"
-  }
+    "name": "blog-website",
+    "version": "1.0.0",
+    "description": "Blog website",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js"
+    },
+    "author": "MD ARIF",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.3",
+        "ejs": "^3.1.8",
+        "express": "^4.18.1",
+        "lodash": "^4.17.21",
+        "mongoose": "^6.6.3",
+        "mongoose-encryption": "^2.1.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20"
+    }
 }
